<resources>
    <string name="app_name">My Material</string>
    <string name="component1">ACTIVITY</string>
    <string name="component2">INTENT</string>
    <string name="component3">SERVICE</string>
    <string name="component4">CONTENT PROVIDER</string>
    <string name="component5">BROADCAST RECEIVER</string>
    <string name="syntax1">ACTIVITY SYNTAX</string>
    <string name="syntax2">INTENT SYNTAX</string>
    <string name="syntax3">SERVICE SYNTAX</string>
    <string name="syntax4">CONTENT PROVIDER SYNTAX</string>
    <string name="syntax5">BROADCAST RECEIVER SYNTAX</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="text_component1">
        An activity represents a single screen in your app with an interface the user can interact with.
        For example, an email app might have one activity that shows a list of new emails, another activity to compose an email, and another activity for reading individual messages.
        Your app is probably a collection of activities that you create yourself, or that you reuse from other apps.
        \n
        Although the activities in your app work with each other to form a cohesive user experience, each activity is independent of the others.
        This enables your app to start an activity in another app, and it enables other apps to start activities in your app (if your app allows this).
        For example, a messaging app could start an activity in a camera app to take a picture, then start an activity in an email app to let the user share the picture in email.
    </string>
    <string name="lanjutt">
        Typically, one Activity in an app is specified as the main activity, for example MainActivity.
        The user sees the main activity when they launch the app for the first time.
        Each activity can start other activities to perform different actions.
        \n
        Each time a new activity starts, the previous activity is stopped, but the system preserves the activity in a stack (the back stack).
        When the user is done with the current activity and presses the Back button, the activity is popped from the stack and destroyed, and the previous activity resumes.
        \n
        When an activity is stopped because a new activity starts, the first activity is notified by way of the activity lifecycle callback methods.
        The activity lifecycle is the set of states an Activity can be in:
        when the activity is first created, when its stopped or resumed, and when the system destroys it.
        You learn more about the activity lifecycle in a later chapter.
        \n\n
        \n\n
        <b>Creating an Activity</b>
        \n\n
        To implement an Activity in your app, do the following:
        \n
        1. Create an Activity Java class.
        \n
        2. Implement a basic UI for the Activity in an XML layout file.
        \n
        3. Declare the new Activity in the AndroidManifest.xml file.
        \n
        When you create a new project for your app, or add a new Activity to your app by choosing <b><i>File > New > Activity</i></b>,
        the template automatically performs the steps listed above.
        \n\n
        \n\n

        <b>About the Activity Lifecycle</b>
        \n\n
        The activity lifecycle is the set of states an activity can be in during its entire lifetime, from the time its created to when its destroyed and the system reclaims its resources.
        As the user interacts with your app and other apps on the device, activities move into different states.
        \n
        For example:
        \n
        1. When you start an app, the apps main activity (Activity 1 in the figure below) is started, comes to the foreground, and receives the user focus.
        \n
        2. When you start a second activity (Activity 2 in the figure below), a new activity is created and started, and the main activity is stopped.
        \n
        3. When you are done with the Activity 2 and navigate back, Activity 1 resumes. Activity 2 stops and is no longer needed.
        \n
        4. If the user does not resume Activity 2, the system eventually destroys it.
    </string>
    <string name="lanjut2">
        \n\n
        \n\n
        <b>Activity States and Lifecycle Callback Methods</b>
        \n\n
        When an Activity transitions into and out of the different lifecycle states as it runs, the Android system calls several lifecycle callback methods at each stage. All of the callback methods are hooks that you can override in each of your Activity classes to define how that Activity behaves when the user leaves and re-enters the Activity. Keep in mind that the lifecycle states (and callbacks) are per Activity, not per app, and you may implement different behavior at different points in the lifecycle of each Activity.
        \n
        This figure shows each of the Activity states and the callback methods that occur as the Activity transitions between different states:
    </string>
    <string name="lanjut3">
        Depending on the complexity of your Activity, you probably do not need to implement all the lifecycle callback methods in an Activity.
        However, its important that you understand each one and implement those that ensure your app behaves the way users expect.
        Managing the lifecycle of an Activity by implementing callback methods is crucial to developing a strong and flexible app.
        \n\n
        \n\n
        <b>BY : </b>
        https://google-developer-training.github.io/android-developer-fundamentals-course-concepts-v2/unit-1-get-started/lesson-2-activities-and-intents/2-1-c-activities-and-intents/2-1-c-activities-and-intents.html#aboutactivities
        \n\n
    </string>
    <string name="text_syntax11"><b>Activity created: the onCreate() method</b></string>
    <string name="text_syntax12"><b>Activity started: the onStart() method</b></string>
    <string name="text_syntax13">Activity resumed/running: the onResume() method</string>
    <string name="text_syntax14">Activity paused: the onPause() method</string>
    <string name="text_syntax15">Activity stopped: the onStop() method</string>
    <string name="text_syntax16">Activity destroyed: the onDestroy() method</string>
    <string name="text_syntax17">Activity restarted: the onRestart() method</string>
    <string name="link">
        \n\n
        <b>BY : </b>
        https://google-developer-training.github.io/android-developer-fundamentals-course-concepts-v2/unit-1-get-started/lesson-2-activities-and-intents/2-2-c-activity-lifecycle-and-state/2-2-c-activity-lifecycle-and-state.html#activitystatesandcallbacks
        \n\n
    </string>
    <string name="satu"><b>Starting an Activity with an Explicit Intent</b></string>
    <string name="dua">
        If you want to start the ShowMessageActivity to show a specific message in an email app, use code like this:
    </string>
    <string name="tiga">
        You can also manually close the started Activity in response to a user action (such as a Button click) with the finish() method:
    </string>
    <string name="empat">Add Data to the Intent</string>
    <string name="lima">To add data to an explicit Intent from the originating Activity, create the Intent object as you did before:</string>
    <string name="enam">Use the setData() method with a Uri object to add that URI to the Intent. Some examples of using setData() with URIs:</string>
    <string name="tujuh">After you have added the data, you can start the Activity with the Intent as usual:</string>
    <string name="delapan">Add Extras to the Intent</string>
    <string name="sembilan">Create an Intent object (if one does not already exist):</string>
    <string name="sepuluh">Use a putExtra() method with a key to put data into the Intent extras. The Intent class defines many putExtra() methods for different kinds of data:</string>
    <string name="sebelas">
        Alternately, you can create a new Bundle and populate that Bundle with your Intent extras.
        Bundle defines many "put" methods for different kinds of primitive data as well as objects that implement Androids Parcelable interface or Javas Serializable.
    </string>
    <string name="duabelas">After you have populated the Bundle, add it to the Intent with the putExtras() method (note the s in Extras):</string>
    <string name="tigabelas">Retrieve the Data From the Intent in the Started Activity</string>
    <string name="empatbelas">To retrieve the Intent the Activity (or other component) was started with, use the getIntent() method:</string>
    <string name="limabelas">Use getData() to get the URI from that Intent:</string>
    <string name="enambelas">Use one of the getExtra() methods to extract extra data out of the Intent object:</string>
    <string name="link2">
        \n\n
        <b>BY : </b>
        https://google-developer-training.github.io/android-developer-fundamentals-course-concepts-v2/unit-1-get-started/lesson-2-activities-and-intents/2-1-c-activities-and-intents/2-1-c-activities-and-intents.html#startingactivitywithexplicitintent
        \n\n
    </string>
</resources>